force-app/main/default/objects/Product__c/fields/Final_Price_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_After_Tax__c</fullName>
    <formula>Selling_Price__c  -   (  Selling_Price__c  * 0.14  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>