force-app/main/default/objects/Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Unique product ID/code</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>